--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Guru-prasad-23/Guruprasad.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BANDLA-BOT/NewPortfolioWebsite/issues"
+  },
+  "homepage": "https://github.com/BANDLA-BOT/NewPortfolioWebsite#readme"
 }
